Fix expected separator for kate_mdi shortcuts

Shortcuts for MDI ToolViews are read in via separate code from other shortcuts, and that separate code expected a separator of a semicolon only, not the semicolon+space combination used everywhere else.

BUG: 493412